--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "dotenv": "^17.2.1",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "uuid": "^10.0.0"
   }
 }
